Edited wiki page through web user interface.

--- a/wiki/Building.wiki
+++ b/wiki/Building.wiki
@@ -45,12 +45,12 @@ $ make package
 
 The above command creates a "Terminal.app" which should be copied to /Applcations on your iPhone.
 
-TODO: Create a wiki page just for installation of the Terminal.app discusses various options (ssh, [[http://iphonedisk.googlecode.com] iphonedisk], iPhoneInterface, etc)
+See the Installation page for more details on how to install the Terminal.app on your phone.
 
 === Packaging ===
 
-This section is for developers who want to package the latest binary release and put it in the downloads section.
+This section is for mobileterminal developers who want to package the latest binary release and put it in the Downloads section.
 
 TODO
 
-Also see BinaryVersioning
+See BinaryVersioning
