--- a/wiki/TipsAndTricks.wiki
+++ b/wiki/TipsAndTricks.wiki
@@ -6,6 +6,10 @@ This page is a collection of tips and tricks that people have found useful.  Ple
 
 = Tips =
 
+== Hide the Keyboard ==
+
+Tap once on the screen to hide the keyboard.  Tap once more to bring it back up.
+
 == Control Characters ==
 
 You can send a control-C by pressing the "bullet" key (First press ".?123", then "#+=", then the circle on the middle right), then press the C key.  This can be useful when you want to escape out of a long running program such as ping.
