Edited wiki page through web user interface.

--- a/wiki/TipsAndTricks.wiki
+++ b/wiki/TipsAndTricks.wiki
@@ -15,6 +15,8 @@ Tap once on the screen to hide the keyboard.  Tap once more to bring it back up.
 
 You can send a control-C by pressing the "bullet" key (First press ".?123", then "#+=", then the circle on the middle right), then press the C key.  This can be useful when you want to escape out of a long running program such as ping.
 
+Escape is control-[, which may come in handy with vi.
+
 == Common unix binaries ==
 
 Get the latest iphone-binkit from http://iphone.natetrue.com which contains lots of useful unix binaries. Also there ssh, apache, python, ruby.  Join #iphone-shell on irc.osx86.hu for more discussion.
