Edited wiki page through web user interface.

--- a/wiki/Roadmap.wiki
+++ b/wiki/Roadmap.wiki
@@ -1,4 +1,5 @@
 #summary Roadmap
+#labels Featured,Phase-Design
 
 = Introduction =
 
@@ -34,6 +35,7 @@ The vt100-iterm branch has more stable support for color, but has drawing bugs t
 
 
 
+ 
  
  
  
