Edited wiki page through web user interface.

--- a/wiki/Roadmap.wiki
+++ b/wiki/Roadmap.wiki
@@ -27,14 +27,25 @@ The vt100 branch has great support for gestures (for arrow, tab, escape keys), s
 
 The vt100-iterm branch has more stable support for color, but has drawing bugs that need to be fixed.
 
-= Details =
+= Short Term =
+
+The current phase will move support for vt100 into the main branch.  This will fix most bugs which are open in the Issues section, which are related to strange wrapping and un-handled characters.
+
+Combining the vt100 and vt100-iterm branches will be a little tricky;  In general I think we should use the CoreGraphics based terminal from vt100-iterm, but keep all of the awesome UI gestures from the vt100 branch.  Porting the pie chart is a work in progress.
+
+
+= Medium Term =
 
 
 
 
 
+= Long Term =
+ 
 
 
+
+ 
  
  
  
