Edited wiki page through web user interface.

--- a/wiki/CHANGELOG.wiki
+++ b/wiki/CHANGELOG.wiki
@@ -12,6 +12,8 @@
     * fixed a problem with the gesture area after application resume
     * fixed a bug in the color chooser by replacing it with a much simpler solution :-)
 
+  * application size reduced by removing unused images from the Resources
+
 == r250 ==
 
   * multiple terminals added (code merged from the multi branch) 
