Edited wiki page through web user interface.

--- a/wiki/CHANGELOG.wiki
+++ b/wiki/CHANGELOG.wiki
@@ -3,6 +3,11 @@
 
 = CHANGELOG =
 
+== r296 ==
+
+  * unstable branch merged into the trunk
+  * code cleaned up and restructured
+
 == r286 ==
 
   * bug fix: color preference changes immediately visible
