--- a/wiki/FAQ.wiki
+++ b/wiki/FAQ.wiki
@@ -1,4 +1,4 @@
-#summary Frequently Asked Questions about running the iPhone Terminal app under iPhone OS release 1.1.4.
+#summary Frequently Asked Questions about running the iPhone Terminal app (under iPhone OS release 1.1.4).
 
 = Frequently Asked Questions (for running MobileTerminal under 1.1.4) =
 
