Edited wiki page through web user interface.

--- a/wiki/Roadmap.wiki
+++ b/wiki/Roadmap.wiki
@@ -8,9 +8,11 @@ This document is a proposal for current plans for MobileTerminal development, to
 = Planned Features =
 
   * Make compatible with the official Apple SDK if possible, when released.
-  * Preferences - Font, size, width/height of the terminal
-  * Preferences for custom meta keys
+  * `[Done]` Preferences - Font, size, width/height of the terminal
+  * `[Done]` Preferences for custom meta keys
   * `[Done]` Landscape keyboard layout as well as keyboard hiding (full screen).
+
+`[Done]` as of latest Cydia version.
 
 
 
