--- a/wiki/Roadmap.wiki
+++ b/wiki/Roadmap.wiki
@@ -1,7 +1,7 @@
 #summary Roadmap
 #labels Phase-Design
 
-Status: <font color=red>OBSOLETE</font>  This page is outdated and needs to be updated.
+Status: <font color="red">OBSOLETE</font>  This page is outdated and needs to be updated.
 
 = Introduction =
 
